# Human_Detection_System_IoT

./: .gitignore  README.md
MapEndPoint/: MapChartJs.html  ReadDeviceToCloudMessages.js  package-lock.json  package.json
MapEndPoint/res/: haar.json  hog.json  yolo.json
NCS2/: README.md  object_detection_demo_yolov3_async  transmit.py  yolov3_async_Res_Saved
Python/: CalcIoU.py  SimulatedDevice.py  detector.py  transmit.py
Python/input_files/: commands
Python/input_files/ground_truth/: GroundTruth.csv
cpp/: CMakeLists.txt  current.txt  detector.cpp  detector.sh  file.txt  transmit.py  ver.cpp
cpp/output_files/: data.json  detections.txt  haar.txt  test.avi
